# Holo-Docs

./: .gitignore  README.md  docker-compose.yml  holo-docs.html  plan.md  run.bat  start_dev.sh
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/canvas/: ConnectionLine.tsx  DocumentMesh.tsx  InteractiveCube.tsx  LightingRig.tsx  Scene.tsx
client/src/hooks/: useGestureState.ts  useSceneSocket.ts  useWebcamStream.ts
client/src/hud/: GestureCursor.tsx  GlassPanel.tsx  StatusBar.tsx
client/src/styles/: glass.css
client/src/styles/shaders/: hologram.glsl
client/src/types/: bridge.ts
server/: Dockerfile  orchestrator_mock.py  pom.xml
server/src/main/java/com/holodocs/: HoloDocsApplication.java
server/src/main/java/com/holodocs/bridge/: BridgeSchemas.java  GestureEventController.java  SceneWebSocketHandler.java
server/src/main/java/com/holodocs/config/: WebSocketConfig.java
server/src/main/java/com/holodocs/graph/: DocumentNode.java  KnowledgeGraphService.java
server/src/main/java/com/holodocs/scene/: GestureInterpreter.java  SceneGraph.java
server/src/main/java/com/holodocs/session/: SessionManager.java  SessionState.java
server/src/main/resources/: application.properties
vision/: Dockerfile  pyproject.toml
vision/src/: bridge_client.py  frame_processor.py  gesture_classifier.py  light_estimator.py  main.py  schemas.py
