[project]
name = "holo-docs-vision"
version = "0.1.0"
description = "CV inference service for Holo-Docs — gesture detection via MediaPipe"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "mediapipe>=0.10.9",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
